[package]
name = "serde_archive"
version = "0.1.5"
authors = ["Jean Collonvillé <jcollonville@resosafe.fr>"]
edition = "2018"
description = "archive serializer for Serde"
license = "MIT"
repository = "https://github.com/resosafe/serde_archive"



[package.metadata.docs.rs]
all-features = true

[features]
with-zip = ["zip"]
with-tar = ["tar"]

[dependencies]
serde = "1.0"
zip = {version = "0.6.2", optional = true}
tar = {version = "0.4", optional = true}

[dev-dependencies]
serde_derive = "1.0"

